[workspace]
# only some tests are currently compile-able
members = [
    "simple_table_pg",
    "simple_table_mysql",
    "simple_table_sqlite",
    "custom_model_and_schema_path",
    "single_model_file",
    "advanced_queries", "build_default_impl_fn",
]
resolver = "2"

[workspace.dependencies]
chrono = { version = "*", features = ["serde"] }
serde = { version = "*", features = ["derive"] }
r2d2 = "*"
